# JAGCS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  android_build.sh
app/: CMakeLists.txt  common.h  main.cpp  qml_declarations.h
app/file_logger/: file_logger.cpp  file_logger.h
app/resources/: app_resources.qrc  resources.qrc
app/sources/: common.h  main.cpp
app/sources/domain/file_logger/: file_logger.cpp  file_logger.h
app/sources/domain/manual_controller/: joystick_controller.cpp  manual_controller.h
app/sources/domain/plugin_manager/: plugin_manager.cpp  plugin_manager.h
app/sources/domain/translation_manager/: translation_helper.cpp  translation_helper.h  translation_manager.cpp  translation_manager.h
app/sources/presentation/presentation_context/: presentation_context.cpp  qml_types.cpp
app/sources/presentation/qml/: MainView.qml  qml.qrc
app/sources/settings/: app_settings.h
app/translations/: app_en.ts  app_ru.ts
core/: CMakeLists.txt
core/includes/data_source/communication/: abstract_communicator.h  endpoint.h  i_communicator_factory.h  serial_device_pool.h
core/includes/data_source/communicator/: abstract_communicator.h
core/includes/data_source/db/: abstract_migration.h  db_migration.h  db_traits.h  i_db_provider.h
core/includes/data_source/db_manager/: db_manager.h
core/includes/data_source/links/: abstract_link.h  bluetooth_link.h  description_link_factory.h  serial_link.h  tcp_link.h  udp_link.h
core/includes/data_source/repositories/: i_links_repository.h
core/includes/data_source/telemetry/: i_telemetry_factory.h  telemetry.h  telemetry_portion.h
core/includes/domain/: service_registry.h
core/includes/domain/communication/: communication_link.h  communication_service.h  i_communication_plugin.h  i_link_repository.h  link_manager.h
core/includes/domain/db_manager/: db_manager.h  i_db_plugin.h
core/includes/domain/mission/: i_mission_repository.h  mission_service.h
core/includes/domain/serial_device/: serial_device_manager.h  serial_device_service.h
core/includes/domain/serial_ports/: serial_ports_service.h
core/includes/domain/telemetry/: telemetry.h  telemetry_service.cpp  telemetry_service.h
core/includes/dto/: dto_traits.h  endpoint.h  link_description.h  link_protocol.h  link_statistics.h  notification.h  point.h  satellite_info.h  vehicle_types.h
core/includes/presentation/: base_presenter.h  object_list_model.h  object_list_model.hpp
core/includes/settings/: core_settings.h  settings_provider.h
core/resources/: app_resources.qrc  mineral.gpl
core/sources/data_source/communication/: abstract_communicator.cpp  endpoint.cpp  serial_device_pool.cpp
core/sources/data_source/communicator/: abstract_communicator.cpp
core/sources/data_source/db/: db_manager.cpp  db_migrator.cpp  db_migrator.h  sqlite_provider.cpp  sqlite_provider.h
core/sources/data_source/db_manager/: db_manager.cpp  db_migrator.cpp
core/sources/data_source/endpoint/: endpoint.h
core/sources/data_source/generic_repository/: generic_repository.hpp
core/sources/data_source/links/: abstract_link.cpp  bluetooth_link.cpp  bluetooth_link.h  description_link_factory.cpp  serial_link.cpp  tcp_link.cpp  udp_link.cpp  udp_link.h
core/sources/data_source/manager/: db_manager.cpp
core/sources/data_source/migrator/: db_migrator.h
core/sources/data_source/repositories/: db_links_repository.cpp  db_links_repository.h
core/sources/data_source/telemetry/: telemetry.cpp  telemetry_portion.cpp  vehicle_telemetry_factory.cpp  vehicle_telemetry_factory.h
core/sources/domain/: service_registry.cpp
core/sources/domain/bluetooth/: bluetooth_service.cpp
core/sources/domain/command/: command_service.cpp
core/sources/domain/command_service/: abstract_command_handler.h  command_service.h
core/sources/domain/communication/: communication_link.cpp  communication_service.cpp  communicator_worker.cpp  communicator_worker.h  db_link_repository.cpp  db_link_repository.h  description_link_factory.cpp  i_link_factory.h  link_manager.cpp
core/sources/domain/db_manager/: core_db_plugin.cpp  core_db_plugin.h  db_manager.cpp
core/sources/domain/mission/: mission_service.cpp
core/sources/domain/proxy_manager/: proxy_manager.cpp  proxy_manager.h
core/sources/domain/serial_device/: serial_device_manager.cpp  serial_device_service.cpp
core/sources/domain/serial_ports/: serial_ports_service.cpp
core/sources/domain/service_registry/: service_registry.cpp
core/sources/domain/telemetry/: telemetry.cpp  telemetry_service.cpp
core/sources/domain/vehicle/: vehicle_service.cpp
core/sources/dto/: base_dto.h  command.cpp  endpoint.cpp  link_description.cpp  link_protocol.cpp  link_statistics.cpp  link_statistics.h  mission.cpp  mission_assignment.cpp  mission_assignment.h  mission_item.h  point.cpp  satellite_info.cpp  vehicle.cpp  video_source.cpp
core/sources/settings/: settings.h  settings_provider.cpp
core/tests/: CMakeLists.txt  tests.cpp
core/tests/data_source/: links_test.cpp  links_test.h  serial_device_pool_test.cpp  serial_device_pool_test.h  telemetry_test.cpp  telemetry_test.h
core/tests/domain/: communication_service_test.cpp  communication_service_test.h  mission_service_test.cpp  telemetry_service_test.cpp  telemetry_service_test.h
core/translations/: core_en.ts  core_ru.ts
plugins/: CMakeLists.txt
plugins/mavlink/: CMakeLists.txt
plugins/mavlink/translations/: mavlink_en.ts  mavlink_ru.ts
tests/: CMakeLists.txt  tests.cpp
tests/communication/: links_test.cpp  links_test.h
tests/data_source/: entities_test.cpp  entities_test.h
tests/data_source_tests/: communication_test.cpp  communication_test.h  data_base_test.cpp  data_base_test.h  entities_test.cpp  entities_test.h  identity_test.cpp  identity_test.h  links_test.cpp  mission_item_test.cpp  mission_item_test.h  repositories_test.cpp  repositories_test.h
tests/domain/: communication_service_test.cpp  communication_service_test.h  mission_service_test.cpp  mission_service_test.h  telemetry_test.cpp
(+2073 files in other folders)
